# saas-group-assignment

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: app_settings.json
data/: faq_index_v2.pkl
data/archive/: classified_faq_v1.json  cleaned_faq_run1_0.95.json  cleaned_faq_run2_0.90.json  unknown_categorization_v1.json
data/configs/: intent_config_v1.json  intent_config_v2.json
data/evals/: eval_results.json  generation_eval_cases.json  generation_judge_results.json  gold_queries.json
data/processed/: classified_faq_v2.json  cleaned_faq_v1.json  cleaned_faq_v2.json  faq_index_v2.pkl  unknown_categorization_v1.json
data/raw/: raw_faq.json
docs/: documentation.md
evals/: evals_generation.py  evals_retrieval.py
scripts/: categorize_unknowns.py  run_classification.py  run_dedup.py
src/: __init__.py  api.py  config.py  embeddings.py  generation.py  search.py
src/pipelines/: data_cleaning.py  deduplication.py
tests/: conftest.py  test_api_validation.py  test_cache.py  test_evaluation.py  test_generation.py  test_search.py
